Tests/Resources/mock-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: das-foo-web
  namespace: foobar
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-foo-gov-uk
spec:
  rules:
  - host: bar.foo.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: das-foo-service-web
          servicePort: 80
