Tests/Resources/mock-invalid-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: das-foo-web
  namespace: foobar
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: bar.foo.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: das-foo-service-web
          servicePort: 80
